# on_policy_distillation

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  LICENSE  OPD_Active_Inference_Review.docx  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  figures.yaml  pymdp.yaml  pyproject.toml  tasks.yaml  tracks.yaml
.aii/: config.yaml
data/: claim_ledger.yaml
docs/: AGENTS.md  README.md  faq.md  glossary.md
docs/architecture/: AGENTS.md  README.md  formal-layers.md  gates-and-validation.md  overview.md  pipeline.md  sheaf-compose-contract.md
docs/development/: AGENTS.md  README.md  conventions.md  extending.md  testing.md
docs/manuscript/: AGENTS.md  README.md  citation-map.md  claims-and-scope.md  figures.md  hydration-tokens.md  section-guide.md
docs/models/: AGENTS.md  README.md  bernoulli-ising.md  classroom.md  graph-world.md  privilege-sweep.md  tmaze-pymdp.md
docs/reference/: AGENTS.md  README.md  configuration-and-extension.md  method-inventory.md  notation-supplement.md  rendering-reproducibility.md
docs/reproducibility/: AGENTS.md  README.md  artifacts.md  rendering.md  standalone-vs-template.md  test-isolation-soak-2026-06-13.md
docs/reviews/: AGENTS.md  README.md  critical-review-2026-06.md  deep-review-2026-06.md  redteam-scholarship-visualization-2026-06.md
gnn/: graph_world.gnn.md  si_tmaze.gnn.md
lean/: OnPolicyDistillation.lean  README.md  lake-manifest.json  lakefile.lean
lean/OnPolicyDistillation/: BernoulliToy.lean  InformationIdentity.lean  README.md  SophisticatedInference.lean
manuscript/: 00_00_sheaf_coverage.md  00_abstract.md  02_intro_motivation.md  03_intro_contributions.md  05_methods_analytical.md  06_methods_pymdp.md  07_methods_lean.md  08_methods_sheaf.md  10_results_mi_sweep.md  11_results_free_energy.md  12_results_si_tmaze.md  13_results_invariants.md  15_discussion_outlook.md  16_appendix_full_sheaf.md  17_conclusion.md  18_supplement_full_coverage.md  19_supplement_reproducibility.md  20_supplement_validation_statistics.md  SYNTAX.md  config.yaml  config.yaml.example  references.bib
manuscript/sheaf/: README.md  manifest.yaml
scripts/: README.md  audit_roadmap_tasks.py  generate_firstprinciples.py  render_pdf.py  run_full_chain.py  run_test_isolation_soak.py  run_tests_chunked.py  simulate_si_tmaze.py  validate_outputs.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  artifact_contracts.py
src/analytical/: bernoulli_toy.py  invariants.py
src/firstprinciples/: AGENTS.md  README.md  __init__.py  active_selection.py  active_selection_general.py  adaptive.py  artifacts.py  classroom.py  divergences.py  diversity.py  empirical.py  energy.py  exposure_bias.py  gkd.py  mapping.py  parallel.py  precision_ledger.py  privilege.py  reward_tilting.py  sdpg.py  sequential_selection.py  sequential_shift.py  si_bridge.py  statistics.py  taxonomy.py  variational_em.py
src/gates/: AGENTS.md  aggregate_rederivation.py  lean.py  (+4 more)
tests/: AGENTS.md  conftest.py  gate_support.py  test_aggregate_rederivation.py  test_artifact_contracts.py  test_artifact_pipeline.py  test_artifact_writer_idempotency.py  test_attestation_pins.py  test_coverage_pipeline.py  test_documentation_contracts.py  test_extension_scripts.py  test_field_level_promotion.py  test_figure_style.py  test_figures.py  test_firstprinciples_active_selection.py  test_firstprinciples_active_selection_general.py  test_firstprinciples_artifacts.py  test_firstprinciples_classroom.py  test_firstprinciples_core.py  test_firstprinciples_dynamics.py  test_firstprinciples_empirical.py  test_firstprinciples_energy.py  test_firstprinciples_parallel.py  test_firstprinciples_precision_ledger.py  test_firstprinciples_sequential_selection.py  test_firstprinciples_sequential_shift.py  test_firstprinciples_si_bridge.py  test_firstprinciples_stats.py  test_gate_index_binding.py  test_gate_support.py  test_gnn.py  test_import_boundaries.py  test_integrity_remediations.py  test_invariants.py  test_layers_report.py  test_lean_boundary.py  test_lying_flag_controls.py  test_manuscript_hydrate.py  test_manuscript_variables.py  test_marker_contracts.py  (+23 more)
(+143 files in other folders)
