[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "active_inference_on_policy_distillation"
version = "1.0.0"
description = "On-Policy Distillation is Active Inference: a first-principles formalisation (correspondence map, divergence geometry, reward-tilted targets, SDPG, two-agent pymdp classroom) plus a sheaf-composed multi-track manuscript. Track/fragment counts are registry-backed (manuscript/sheaf/tracks.yaml); not hard-coded here."
authors = [{ name = "Daniel Ari Friedman", email = "daniel@activeinference.institute" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "inferactively-pymdp==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    # Third-party only: pymdp calls jax.nn.one_hot with float-typed indices internally
    # (not reachable from this project's code). Scoped to the exact message + category so
    # it can never mask a first-party warning; if jax removes the float path pymdp fails
    # loudly rather than silently, so this ignore hides no real signal.
    "ignore:jax.nn.one_hot input should be integer-typed:DeprecationWarning",
]
markers = [
    "artifact_slow: full fixed-point or artifact-write tests kept out of the fast local lane",
    "render_slow: figure rendering, animation, rollout, or large-compose tests kept out of the daily edit loop",
    "mutates_artifacts: tests that temporarily mutate generated or tracked artifact files",
    "requires_pymdp: tests that import inferactively-pymdp",
    "timeout(seconds): per-test timeout for artifact write/validate isolation checks",
]

# Mirrors the template root [tool.ruff] (E/F select, line-length 120) so a bare
# `uvx ruff check src tests scripts` run inside this project matches the root gate.
# Per-file ignores match root semantics: sys.path bootstrap before imports in
# scripts/tests (E402) and long fixture payloads / CLI strings (E501).
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402", "E501"]
"tests/**/*.py" = ["E712", "E402", "E501"]
"src/**" = ["E501"]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2

[tool.uv]
